add navigatino menu in header

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -612,6 +612,8 @@ white = #fff
 				// background blue
 				span
 					display block
+			&.js-navigation
+				cursor pointer
 			// &.selected
 			// 	text-decoration underline 
 	.socials
@@ -817,6 +819,7 @@ white = #fff
 	$ NAVIGATION MENU
 *------------------------------------*/
 .am-NavigationMenu
+	display none
 	background charcoal-grey
 
 .am-NavigationMenu-section
