--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -108,7 +108,7 @@
 		<div class="grid-container">
 			<div class="grid-33 grid-parent am-NavigationMenu-section">
 				<div class="grid-50 mobile-grid-50">
-					<figure class="am-NavigationMenu-section-image" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1455045619/general/navigation-image1.jpg'); background-position: 50% 30%;"></figure>
+					<figure class="am-NavigationMenu-section-image" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_200,h_200,c_fill/general/navigation-image1.jpg'); background-position: 50% 30%;"></figure>
 				</div>
 				<div class="grid-50 mobile-grid-50">
 					<p class="am-NavigationMenu-title-text u-padding-bottom-15">Obras y Creaciones</p>
@@ -117,7 +117,7 @@
 			</div>
 			<div class="grid-33 grid-parent am-NavigationMenu-section">
 				<div class="grid-50 mobile-grid-50">
-					<figure class="am-NavigationMenu-section-image" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1455045668/general/navigation-image2.jpg'); background-position: 50% 75%;"></figure>
+					<figure class="am-NavigationMenu-section-image" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_200,h_200,c_fill/general/navigation-image2.jpg'); background-position: 50% 75%;"></figure>
 				</div>
 				<div class="grid-50 mobile-grid-50">
 					<p class="am-NavigationMenu-title-text u-padding-bottom-15">Artistas Creadores</p>
@@ -126,7 +126,7 @@
 			</div>
 			<div class="grid-33 grid-parent am-NavigationMenu-section">
 				<div class="grid-50 mobile-grid-50">
-					<figure class="am-NavigationMenu-section-image" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1455045789/general/navigation-image3.png'); background-position: 50% 35%;"></figure>
+					<figure class="am-NavigationMenu-section-image" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_200,h_200,c_fill/general/navigation-image3.png'); background-position: 50% 35%;"></figure>
 				</div>
 				<div class="grid-50 mobile-grid-50">
 					<p class="am-NavigationMenu-title-text u-padding-bottom-15">Colecciones</p>
