remove selected from discover button

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -31,7 +31,7 @@
 	              {% if user %}
 	                <a href="/feed" class="feed-menu">ART FEED<span></span></a>
 	              {% endif %}
-								<a class="works-menu js-navigation">DESCUBRE<span></span></a>
+								<a class="js-navigation">DESCUBRE<span></span></a>
 								<a href="/works/category/all/page-1/?order=newest&featured=1" class="works-menu">OBRAS<span></span></a>
 								<a href="/users/specialty/all/page-1" class="users-menu">ARTISTAS<span></span></a>
 	              <a href="/blog">BLOG<span></span></a>
