--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -612,7 +612,11 @@ white = #fff
 				// background blue
 				span
 					display block
-			&.js-navigation
+			&.open
+				// background blue
+				span
+					display block
+			&.js-menu-discover
 				cursor pointer
 			// &.selected
 			// 	text-decoration underline 
@@ -4085,6 +4089,7 @@ white = #fff
 		min-height 220px
 		background-size: cover;
 		background-position: center center;
+		background-color rgba(red, .5)
 		img
 			position absolute
 		.tag
@@ -4216,7 +4221,7 @@ white = #fff
 	align-items: center;
 	position relative
 	overflow hidden
-	background rgba(black, .3)
+	// background rgba(black, .3)
 
 	.am-Profile-banner-img
 		position absolute
