--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -147,7 +147,7 @@
 					<i class="bi_interface-plus"></i>
 					<p class="title u-margin-top-20">No tienes ninguna obra o creación <br> subida todavía :(</p>
 					<p class="subtitle u-margin-top-20">Pero anímate cualquiera puede crear! <br> Sube un dibujo o una foto y comienza tu aventura!</p>
-					<a href="#" class="subtitle u-margin-top-20">Saber mas sobre subir obras</a>
+					<a href="http://artemanifiesto.com/blog/post/tutorial-para-subir-una-obra-nueva-20216102143" class="subtitle u-margin-top-20">Saber mas sobre subir obras</a>
 					<a href="/user/{{user.username}}/work/add" class="u-margin-top-30 button"><i class="bi_interface-plus"></i>&nbsp;&nbsp;SUBIR PRIMERA OBRA</a>
 				</div>
 			</div>
