add links to navigatino menu

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -106,7 +106,7 @@
 	********************************************************************* -->
 	<div class="am-NavigationMenu u-padding-bottom-30">
 		<div class="grid-container">
-			<div class="grid-33 grid-parent am-NavigationMenu-section">
+			<a href="/works/category/all/page-1/?order=newest&featured=1" class="grid-33 grid-parent am-NavigationMenu-section">
 				<div class="grid-50 mobile-grid-50">
 					<figure class="am-NavigationMenu-section-image" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_200,h_200,c_fill/general/navigation-image1.jpg'); background-position: 50% 30%;"></figure>
 				</div>
@@ -114,8 +114,8 @@
 					<p class="am-NavigationMenu-title-text u-padding-bottom-15">Obras y Creaciones</p>
 					<p class="am-NavigationMenu-description-text">Conoce los productos que debes tener para este verano 2015</p>
 				</div>
-			</div>
-			<div class="grid-33 grid-parent am-NavigationMenu-section">
+			</a>
+			<a href="/users/specialty/all/page-1" class="grid-33 grid-parent am-NavigationMenu-section">
 				<div class="grid-50 mobile-grid-50">
 					<figure class="am-NavigationMenu-section-image" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_200,h_200,c_fill/general/navigation-image2.jpg'); background-position: 50% 75%;"></figure>
 				</div>
@@ -123,8 +123,8 @@
 					<p class="am-NavigationMenu-title-text u-padding-bottom-15">Artistas Creadores</p>
 					<p class="am-NavigationMenu-description-text">Conoce los productos que debes tener para este verano 2015</p>
 				</div>
-			</div>
-			<div class="grid-33 grid-parent am-NavigationMenu-section">
+			</a>
+			<a href="#" class="grid-33 grid-parent am-NavigationMenu-section">
 				<div class="grid-50 mobile-grid-50">
 					<figure class="am-NavigationMenu-section-image" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_200,h_200,c_fill/general/navigation-image3.png'); background-position: 50% 35%;"></figure>
 				</div>
@@ -132,6 +132,6 @@
 					<p class="am-NavigationMenu-title-text u-padding-bottom-15">Colecciones</p>
 					<p class="am-NavigationMenu-description-text">Conoce los productos que debes tener para este verano 2015</p>
 				</div>
-			</div>
+			</a>
 		</div>
 	</div>
