--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -124,7 +124,7 @@
 					<p class="am-NavigationMenu-description-text">Conoce los productos que debes tener para este verano 2015</p>
 				</div>
 			</a>
-			<a href="#" class="grid-33 grid-parent am-NavigationMenu-section">
+			<a href="/collections/category/all/page-1" class="grid-33 grid-parent am-NavigationMenu-section">
 				<div class="grid-50 mobile-grid-50">
 					<figure class="am-NavigationMenu-section-image" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_200,h_200,c_fill/general/navigation-image3.png'); background-position: 50% 35%;"></figure>
 				</div>
