fix pagination in feed view

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -34,7 +34,7 @@
 								<a class="works-menu js-menu-discover">DESCUBRE<span></span></a>
 								<!-- <a href="/works/category/all/page-1/?order=newest&featured=1" class="works-menu">OBRAS<span></span></a> -->
 								<!-- <a href="/users/specialty/all/page-1" class="users-menu">ARTISTAS<span></span></a> -->
-	              				<a href="/blog">BLOG<span></span></a>
+	              				<a href="/blog" class="blog-menu">BLOG<span></span></a>
 							</ul>
 						{% if user %}
 							<ul class="socials">
