--- a/app/views/partials/elements/post.html
+++ b/app/views/partials/elements/post.html
@@ -23,7 +23,7 @@
             <% } else if(Category.nameSlugify === "inspiracion") { %>
               <span class="tag uppercase orange"><%= Category.name %></span>
             <% } %>
-
+            <div class="cover">HILI!</div>
             <div class="inner">
               <p class="title"><%=name%></p>
               <div class="stats u-margin-top-15">
