--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4089,7 +4089,15 @@ white = #fff
 		min-height 220px
 		background-size: cover;
 		background-position: center center;
-		background-color rgba(red, .5)
+		// background-color rgba(red, .5)
+		.cover
+			position: absolute;
+			height: 100%;
+			width: 100%;
+			top: 0;
+			left: 0;
+			background: rgba(0,0,0,.3);
+			box-sizing: border-box;
 		img
 			position absolute
 		.tag
@@ -4221,7 +4229,7 @@ white = #fff
 	align-items: center;
 	position relative
 	overflow hidden
-	// background rgba(black, .3)
+	background rgba(black, .3)
 
 	.am-Profile-banner-img
 		position absolute
@@ -4874,6 +4882,112 @@ white = #fff
 			margin-right 20px
 
 
+.sales-title
+	font-family: 'Montserrat', sans-serif;
+	font-size 24px
+	color #393d3f
+	text-align center
+
+.sales
+	display flex
+	border solid 1px #ddd
+	margin 20px 0
+	
+	&-left
+		flex 2
+		display flex
+		.image-card
+			max-width 220px
+			margin auto
+			.content
+				border solid 1px #ddd
+				padding 10px
+			.title
+				font-family: 'Montserrat', sans-serif;
+				font-weight bold
+				font-size 11px
+				color #393d3f
+				text-transform uppercase
+				padding-bottom 5px
+				display inline-block
+				line-height 1.15
+			.author
+				display inline-block
+				font-family: 'PT Serif', serif;
+				font-size 12px
+				color #838c8c
+				font-style italic
+	&-right
+		flex 1
+		padding 10px 20px
+		border-left solid 1px #ddd
+		.input
+		.select
+		.textarea
+			width 100%
+			border solid 1px #979797
+			border-radius 4px
+			margin-bottom 15px
+			padding 8px 10px
+			box-sizing: border-box;
+			font-family: 'Montserrat',sans-serif;
+			font-size 11px
+			color warm-grey
+		.select
+			max-width 200px
+		.textarea
+			min-height 75px
+			
+		.title
+			font-family: 'Montserrat',sans-serif;
+			font-size 14px
+			color charcoal-grey
+			padding-bottom 8px
+		.subtitle
+			font-family: 'Montserrat', sans-serif;
+			font-size 14px
+			color warm-grey
+			margin-bottom 25px
+		.button
+			background-color #3bd64a
+			font-family: 'Montserrat',sans-serif;
+			font-weight bold
+			font-size 10px
+			color white
+			border-radius 3px
+			padding 10px 8px 8px 8px
+			min-width 220px
+			box-sizing border-box
+			text-align center
+			cursor pointer
+			margin-left auto
+			margin-right auto
+			display table
+			border solid 1px #333
+			letter-spacing 2px
+			&.white
+				background-color white
+				color #61565a
+		
+		.switchs
+			width 100%
+			.switch-label
+				font-family: 'PT Serif', serif;
+				font-size 13px
+				color #777
+			.am-Switch-button
+				margin-bottom 5px
+			
+			input[type="checkbox"]
+				display none
+
+			input[type="checkbox"]:checked+label .am-Switch-button
+				justify-content: flex-end;
+				background: #88d68f;
+				
+		.sizes
+			max-width 200px
+			margin auto
 
 
 @keyframes load
