add shadow to title texts in blog

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -203,6 +203,8 @@ white = #fff
 			right 0
 			&.blog
 				flex-direction: column;
+				.title
+					text-shadow: 0 2px 4px rgba(black, .5);
 		.title
 			text-align center
 			// font-size 48px
@@ -4260,6 +4262,7 @@ white = #fff
 		max-width 900px
 		margin auto
 		line-height 1.15
+		text-shadow: 0 2px 4px rgba(black, 0.5);
 
 	.input-title
 		font-family: 'Montserrat',sans-serif;
