add z-index in hover

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4118,6 +4118,8 @@ white = #fff
 			margin auto
 			padding 20px
 			width 100%
+			position relative
+			z-index 10
 			.title
 				font-family: 'Montserrat',sans-serif;
 				font-weight bold
