add color in blog tags

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4114,6 +4114,14 @@ white = #fff
 			padding 3px 5px
 			letter-spacing 1px
 			border-radius 3px
+			&.orange
+				background #d8a252
+			&.green
+				background #007ac2
+			&.purple
+				background #e98fff
+			&.blue
+				background #6b3de4
 		.inner
 			margin auto
 			padding 20px
