--- a/app/views/partials/report.html
+++ b/app/views/partials/report.html
@@ -27,6 +27,7 @@
             <li><a href="/report/general">General</a></li>
             <li><a href="/report/users/page-1">Usuarios</a></li>
             <li><a href="/report/works/page-1">Obras</a></li>
+            <li><a href="/report/blog/page-1">Blog</a></li>
             <li><a href="/report/banners">Banners</a></li>
           </ul>
         </div>
