--- a/app/views/report/blog.html
+++ b/app/views/report/blog.html
@@ -1,11 +1,11 @@
-{% set templates = ['table-work-item']%}
-{% set pageTitle = 'Reporte Obras' %}
-{% set path = 'works' %}
+{% set templates = ['table-blog-item']%}
+{% set pageTitle = 'Reporte Blog' %}
+{% set path = 'blog' %}
 
 {% extends '../partials/report.html' %}
 
 {% block content %}
-<h2 class="sub-header">Obras <span class="total">({{data.pagination.total}})</span></h2>
+<h2 class="sub-header">Blog <span class="total">({{data.pagination.total}})</span></h2>
 
 <div class="row">
   <div class="col-lg-2">
@@ -29,8 +29,7 @@
       <div class="input-group-btn">
         <button type="button" class="btn btn-drop btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="property">Propiedad</span> <span class="caret"></span></button>
         <ul class="dropdown-menu">
-          <li><a class="name">nombre</a></li>
-          <li><a class="featured-term">recomendado</a></li>
+          <li><a class="featured-term">publicado</a></li>
         </ul>
       </div>
       <input type="text" class="form-control search-box" aria-label="...">
@@ -51,8 +50,7 @@
         <th>nombre</th>
         <th>popularidad</th>
         <th>vistas</th>
-        <th>publico</th>
-        <th>en venta</th>
+        <th>publicado</th>
         <th>creado</th>
         <th></th>
         <th></th>
@@ -68,7 +66,7 @@
 <script>
   var data = {{data|json|safe}};
   $(function() {
-    new APP.AdminWorksScreen();
+    new APP.AdminBlogScreen();
   });
 </script>
 {% endblock %}
