--- a/app/views/report/users.html
+++ b/app/views/report/users.html
@@ -53,7 +53,7 @@
   <table class="table table-striped">
     <thead>
       <tr>
-        <th></th>
+        <th>imagen</th>
         <th>username</th>
         <th>correo</th>
         <th>ciudad</th>
