--- a/app/views/partials/report.html
+++ b/app/views/partials/report.html
@@ -25,11 +25,14 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/report/general">General</a></li>
-            <li><a href="/report/sellers/page-1">Vendedores</a></li>
             <li><a href="/report/users/page-1">Usuarios</a></li>
             <li><a href="/report/works/page-1">Obras</a></li>
+            <li><a href="/report/works/page-1">Colecciones</a></li>
+            <li><a href="/report/products/page-1">Productos</a></li>
             <li><a href="/report/blog/page-1">Blog</a></li>
             <li><a href="/report/banners">Banners</a></li>
+            <li><a href="/report/sellers_applying/page-1">Vendedores en revisión</a></li>
+            <li><a href="/report/products_applying/page-1">Productos en revisión</a></li>
           </ul>
         </div>
       </div>
