--- a/app/views/partials/elements/table-blog-item.html
+++ b/app/views/partials/elements/table-blog-item.html
@@ -14,7 +14,7 @@
             ];
             print(fragments.join('-'));
         %></td>
-    <td><a href="/blog/post/<%=nameSlugify%>/edit" class="btn btn-success">editar</a></td>
+    <td><a target='_blank' href="/blog/post/<%=nameSlugify%>/edit" class="btn btn-success">editar</a></td>
     <% if(featured) { %>
       <td><a class="btn featured-btn btn-primary">AM</a></td>
     <% } else { %>
