--- a/app/views/partials/elements/table-work-item.html
+++ b/app/views/partials/elements/table-work-item.html
@@ -15,7 +15,7 @@
             ];
             print(fragments.join('-'));
         %></td>
-    <td><a href="/user/<%=User.username%>/work/<%=nameSlugify%>/edit" class="btn btn-success">editar</a></td>
+    <td><a target='_blank' href="/user/<%=User.username%>/work/<%=nameSlugify%>/edit" class="btn btn-success">editar</a></td>
     <% if(featured) { %>
       <td><a class="btn featured-btn btn-primary">AM</a></td>
     <% } else { %>
