add creator detail

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4948,6 +4948,9 @@ white = #fff
 	&.white
 		background-color white
 		color #61565a
+	&.blue
+		background-color #277cea
+		color white
 
 .sales-option-button
 	margin 20px 0 80px 0
