add stlye for title

--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -67,9 +67,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
- -->
-
+	</div> -->
 
 	<div class="grid-container">
 		<div class="grid-100">
@@ -164,7 +162,8 @@
 				</div>
 				<div class="sales-right">
 
-					<a class="sales-button white">REEMPLAZAR IMAGEN</a>
+					<!-- <a class="sales-button white">REEMPLAZAR IMAGEN</a> -->
+					<p class="title u-margin-top-10" style="text-align: center;">DETALLES ENVÍO</p>
 					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
 
 					<p class="title">Detalles del Paquete</p>
