product applying notifications

--- a/app/views/partials/elements/table-product-applying-item.html
+++ b/app/views/partials/elements/table-product-applying-item.html
@@ -13,6 +13,6 @@
             ];
             print(fragments.join('-'));
         %></td>
-    <td><a class="btn featured-btn btn-primary">Aceptar</a></td>
+    <td><a class="btn featured-btn btn-primary" target="_blank" href="/report/products_applying/product/<%=id%>">Revisar</a></td>
   </tr>
 </script>
