--- a/app/views/user/notifications.html
+++ b/app/views/user/notifications.html
@@ -1,5 +1,6 @@
 {% set templates = ['notification-follow', 'notification-like',
- 										'notification-request', 'notification-review'] %}
+ 										'notification-request', 'notification-review',
+                    'notification-accepted-product', 'notification-denied-product'] %}
 {% set pageTitle = 'Notificaciones' %}
 {% set path = 'notifications' %}
 
