--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -66,7 +66,7 @@
 						<div class="body">
 							<p class="text">Producto:</p>
 							<div class="u-center">
-								<button class="am-View-button expand u-margin-top-20 buy">COMPRAR</button>
+								<a href="/user/{{product.User.username}}/product/{{product.nameSlugify}}/buy" class="am-View-button expand u-margin-top-20 buy">COMPRAR</a>
 							</div>
 						</div>
 					</div>
