--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4948,6 +4948,9 @@ white = #fff
 	&.white
 		background-color white
 		color #61565a
+	&.blue
+		background-color #277cea
+		color white
 
 .sales-option-button
 	margin 20px 0 80px 0
@@ -5054,6 +5057,21 @@ white = #fff
 	.sales-button
 		min-width 150px
 
+.creator-confirm
+	display flex
+	.title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 24px
+		color #393d3f
+		flex 1
+	.options
+		flex 1
+		display flex
+		justify-content center
+		.sales-button
+			margin-left: initial;
+			margin-right: initial;
 
 @keyframes load
 	0%
