--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -28,8 +28,13 @@
 					<div class="am-Filter-item">
 						<ul class="am-Filter-subOptions">
 							<a href="/user/{{profile.username}}/account/" class="selected">Mis datos de perfil</a>
+							<a href="#">Mis compras</a>
+							<a href="#">Mis direcciones de envío</a>
+							<a href="#">Métodos de pago</a>
+							<a href="#">Configuracion cuenta</a>
 							<a href="/user/{{profile.username}}/account/password">Cambiar contraseña</a>
-							<!-- <a href="#">Administración de cuenta</a> -->
+							<a href="#">Editar datos de vendedor</a>
+							<a href="#">Gestor de pedidos</a>
 						</ul>
 					</div>
 					<!-- <div class="am-Filter-item">
